src/components/BarChart/style.module.css
.container {
  position: relative;
}

.bar {
  background-color: #c4c4c4;
  border-radius: 10px;
  height: 12px;
  width: 100%;
  position: relative;
  margin-bottom: 8px;
}

.barFrac {
  border-radius: 10px;
  height: 12px;
  position: absolute;
  top: 0;
  left: 0;
  transition: width 0.3s;
}

.barFeature {
  background-color: var(--iris-100);
}

.barBug {
  background-color: var(--fuchsia-100);
}

.barLabel {
  position: absolute;
  transition: left 0.3s;
}

.percent {
  font-weight: bold;
}

